<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:context="com.example.android.quizapp.MainActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="10sp"
                    android:id="@+id/points"
                    android:layout_alignParentTop="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/totalPoints"
                    android:padding="10sp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:background="@color/score"
                    android:text="@string/questionLabel"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/totalPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:layout_alignBaseline="@+id/points"
                    android:layout_alignParentRight="true"
                    android:fontFamily="sans-serif-light"
                    android:padding="10dp"
                    android:text="@string/question3_of_4"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>
            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="15dp"
                android:fontFamily="@font/ultra"
                android:text="@string/question3"
                android:textColor="@color/question"
                android:textSize="20dp" />

            <ImageView
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:src="@drawable/q3"
                />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RGroup">

                <RadioButton
                    android:id="@+id/q3CorrectAnswer"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/question3Option1"
                    />

                <RadioButton
                    android:id="@+id/q3WrongAnswer1"
                    android:layout_marginLeft="35dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="15sp"
                    android:text="@string/question3Option2"
                    />


                <RadioButton
                    android:id="@+id/q3WrongAnswer2"
                    android:layout_marginLeft="35dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textSize="15sp"
                    android:text="@string/question3Option3"
                    android:layout_marginBottom="70dp"
                    />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:layout_width="400px"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:background="@color/submitButton"
            android:onClick="updateQ3scoreAndGoToNext"
            android:text="@string/nextButton"
            android:textAllCaps="true" />

    </RelativeLayout>

</ScrollView>