<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            tools:context="com.example.android.quizapp.Question2Activity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_weight="0">

                <TextView
                    android:id="@+id/points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10sp"
                    android:layout_toLeftOf="@+id/totalPoints"
                    android:background="@color/score"
                    android:padding="10sp"
                    android:text="@string/questionLabel"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignBaseline="@+id/points"
                    android:layout_alignParentRight="true"
                    android:background="@color/colorPrimary"
                    android:fontFamily="sans-serif-light"
                    android:padding="10dp"
                    android:text="@string/question2_of_4"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/ultra"
                android:text="@string/question2"
                android:textColor="@color/question"
                android:textSize="20sp" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RGroup">

                <RadioButton
                    android:id="@+id/q2WrongAnswer1"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/question2Option1"
                    />

                <RadioButton
                    android:id="@+id/q2WrongAnswer2"
                    android:layout_marginLeft="35dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="15sp"
                    android:text="@string/question2Option2"
                    />

                <RadioButton
                    android:id="@+id/q2CorrectAnswer"
                    android:layout_marginLeft="35dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textSize="15sp"
                    android:text="@string/question2Option3"
                    android:layout_marginBottom="22dp"
                    />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:layout_width="400px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@color/submitButton"
            android:onClick="updateQ2scoreAndGoToNext"
            android:text="Next"
            android:textAllCaps="true" />



    </RelativeLayout>
</ScrollView>